--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,8 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
-@media only screen and (min-width: 482px) and (max-width: 769px){
-	
-}
+
 .w3-sidebar{background:#0C264A; padding:80px 30px; width:15%;}
 .open{width:15%;}
 .large{width:100%; left:0px;}
@@ -26,3 +24,27 @@
 .w3-enrollments .w3-card-2 div a{width:50px; background:#0C264A; padding:8px 15px; color:#ffffff; text-decoration:none; border-radius:40px; font-size:12px;}
 .pagination{padding-left:5%; margin-bottom:60px;}
 .pagination .w3-bar .w3-button{width:40px; background:#0C264A; margin:0px; }
+
+@media only screen and (min-width: 482px) and (max-width: 769px){
+	.w3-sidebar{background:#0C264A; padding:80px 2px; width:15%; overflow:hidden; font-size:10px;}
+	.container{width:85%; padding-bottom:60px;}
+	.container .w3-bar{padding-left:25px; padding-right:0px;}
+	.container .w3-bar a{text-decoration:none; color:#457B9D; padding:4px; }
+	.container .w3-bar .toggler{border:none; background:#fff;}
+	.container .w3-bar input{padding:10px; border-radius:15px; background:#F1FAEE; border:thin #999; font-size:12px;}
+	
+	.w3-status-card a .w3-card-2 h3{text-transform:uppercase; color:#0C264A; font-size:12px; font-weight:bold;}
+}
+
+@media only screen and (max-width: 481px)
+{
+	.w3-sidebar{background:#0C264A; padding:20px 0px; overflow:hidden; font-size:9px; max-width:30%; }
+	.container .w3-bar .toggler{display:none;}
+	.container{ max-width:70%; }
+	.container .w3-bar{padding:4px;}
+	.container .w3-bar input{padding:10px; border-radius:12px; background:#F1FAEE; border:thin #999; font-size:12px;			margin:10px;}
+	.w3-status-card a .w3-third{width:30%; margin-right:2.5%; margin-bottom:20px;}
+	.w3-status-card{padding-left:5%; margin:50px 0px;}
+	.w3-status-card a .w3-card-2 h1{font-weight:bold; font-size:48px;  color:#0C264A;}
+	.w3-status-card a .w3-card-2 h3{text-transform:uppercase; color:#0C264A; font-size:16px;}
+}
