--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -14,6 +14,13 @@
 .w3-status-card{padding-left:5%; margin:50px 0px;}
 .w3-status-card a .w3-card-2 h1{font-weight:bold; font-size:64px;  color:#0C264A;}
 .w3-status-card a .w3-card-2 h3{text-transform:uppercase; color:#0C264A;}
+.w3-status-card .w3-card-2 .w3-half{padding:10px 20px 10px 20px;}
+.w3-status-card .w3-card-2 .w3-half p{color:rgb(12, 38, 74);}
+.w3-status-card .w3-card-2 .w3-half h3{font-size:20px;}
+.w3-status-card .w3-card-2 .w3-half a{width:220px; background:#0C264A; padding:15px 85px; color:#ffffff; text-decoration:none; border-radius:40px; font-size:12px; font-weight:bold;}
+.w3-status-card .w3-card-2 .w3-quarter{overflow:hidden;}
+.w3-status-card .w3-card-2 .w3-quarter h1{font-size:64px; color:#1D3557;}
+
 .w3-enrollments{padding-left:5%; margin:30px 0px;}
 .w3-enrollments h3{font-size:20px;}
 .w3-enrollments .w3-card-2{width:46.25%; margin-right:2.5%; margin-bottom:20px;}
@@ -40,6 +47,15 @@
 	.container .w3-bar .toggler{border:none; background:#fff;}
 	.container .w3-bar input{padding:12px 4px 12px 28px; border-radius:15px; background:url(../images/search.png) no-repeat #F1FAEE; border:thin #999; font-size:12px; width:180px; margin:10px;}	
 	.w3-status-card a .w3-card-2 h3{text-transform:uppercase; color:#0C264A; font-size:12px; font-weight:bold;}
+.w3-status-card .w3-card-2 .w3-half{padding:0px 10px 10px 10px;}
+	.w3-status-card .w3-card-2 .w3-half p{color:rgb(12, 38, 74); font-size:12px;}
+
+	.w3-status-card .w3-card-2 .w3-half a{width:200px; background:#0C264A; padding:10px 65px; color:#ffffff; text-decoration:none; border-radius:20px; font-size:12px;}
+	.w3-status-card .w3-card-2 .w3-quarter{overflow:hidden;}
+	.w3-status-card .w3-card-2 .w3-quarter h1{font-size:45px; color:#1D3557;}
+	
+	.w3-enrollments .w3-card-2 h3{padding-left:10px; }
+	.w3-enrollments .w3-card-2 p{padding:0px 20px; color:#0C264A; font-size:12px;}
 }
 
 @media only screen and (max-width: 481px)
