--- a/css/signupstyle.css
+++ b/css/signupstyle.css
@@ -12,8 +12,7 @@
 
 
 .home{
-	margin-left:25%;
-	
+	margin-left: 25%;
 
 }
 
@@ -67,8 +66,7 @@ border-radius: 50px;}
 }
 
 .form1{
-	 
-	 margin-top:10px;
+	margin-top:10px;
     background: #F1FAEE;
 box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
 border-radius: 7px;
@@ -80,15 +78,12 @@ h1{
 	position: absolute;
 	color: #E63946;
 	font-family:PTSans;
-
 font-weight: normal;
 line-height: normal;
 font-size: 30px;
 margin-top: 1em;
-letter-spacing: 2px;
-word-spacing: 3px;
-margin-right: 20%;
-margin-left: 30%;
+width:80%;
+margin-left: 1.5%;
 
 
 }
@@ -103,45 +98,13 @@ font-size: 14px;
 color: #1D3557;
 margin-top: 5em;
 text-align: center;
-margin-left: 36.3%;
+margin-left: 37%;
 letter-spacing: 1px;
 }
 
-
-
-.email{
-	 
-	 background: #F1FAEE;
-     margin-top: 9em;
-     margin-bottom:2em;
-     margin-left: 100px;
-     padding: 12px 20px;
-         padding: 8px;
-    display: block;
-    border: none;
-    border-bottom: 1px solid #828282;
-    border-bottom margin:10px;
-    width: 61%;
-    font-family: PT Sans;
-line-height: 1.5;
-font-size: 17px;
-color: #BDBDBD;
-text-align: center;
-
-}
-
-.mail{
-position:absolute;
-margin-top:-65px;
-margin-left:-163px;
-height: 15px;
-width:17px;
-}
-
-
-
-.password{
+.fullname{
 	background: #F1FAEE;
+	margin-top: 115px;
 	margin-left:100px;
 	padding: 12px 20px;
 	padding: 8px;
@@ -151,41 +114,84 @@ width:17px;
     width: 61%;
     font-family: PT Sans;
 line-height: 1.5;
-font-size: 17px;
+font-size: 16px;
+color: #1D3557;
+font-weight: lighter;
+text-align: center;
+}
+
+
+.name{
+ position:absolute;
+  margin-top:-30px;
+ margin-left: -164px;
+ height: 15px;
+width:17px;
+
+}
+
+.email{
+	 
+	 background: #F1FAEE;
+     margin-top: 1.5em;
+     margin-bottom:2em;
+     margin-left: 100px;
+     padding: 12px 20px;
+         padding: 8px;
+    display: block;
+    border: none;
+    border-bottom: 1px solid #828282;
+    border-bottom margin:10px;
+    width: 61%;
+    line-height:1.5;
+    font-family: PT Sans;
+line-height: 1.4;
+font-size: 16px;
 color: #BDBDBD;
 text-align: center;
 }
 
+.mail{
+position:absolute;
+margin-top:-62px;
+margin-left:-164px;
+height: 15px;
+width:17px;
+}
+
+
+
+.password{
+	margin-top:-10px;
+	background: #F1FAEE;
+	margin-left:100px;
+	padding: 12px 20px;
+	padding: 8px;
+    display: block;
+    border: none;
+    border-bottom:1px solid #828282;
+    width: 61%;
+    font-style: normal;
+    font-family: PT Sans;
+font-weight: normal;
+line-height: 1.5;
+font-size: 16px;
+color: #BDBDBD;
+text-align: center;
+
+}
+
 .key{
 position:absolute;
-margin-top:-31.4px;
-margin-left:-32px;
+margin-top:-31px;
+margin-left:-160px;
 height: 17px;
 width:10px;
 }
 
 
-label{
-	font-family: Circular;
-line-height: normal;
-font-size: 11px;
-color: #4F4F4F;
-margin-top:2px;
-margin-left:-35px;
-margin-right:20px;
-}
 
-.forgot{
-	margin-top:9px;
-	margin-right:20%;
-	float:right;
-	font-family: Circular;
-line-height: normal;
-font-size: 10px;
-color: #1D3557;
-}
-
-.signin{
+.sign{
 	margin-top: 90px;
 	text-decoration-color: #FFFFFF;
 	position: absolute;
@@ -212,7 +218,17 @@ margin-top: 95px;
 margin-left:165px;}
 
 .lines{
-	margin-top:-8px;
+	margin-top:-1px;
+}
+
+.right{
+
+width:85px;
+float:right;
+border-color:#828282;
+margin-top:-20px;
+margin-right:165px;
+
 }
 
 .left{
@@ -227,18 +243,6 @@ font-size: 15px;
 text-align: center;
 color: #B8B8B8;
 }
-
-.right{
-
-width:85px;
-float:right;
-border-color:#828282;
-margin-top:-20px;
-margin-right:165px;
-
-}
-
-
 
 .file{
 	display:inline-block;
@@ -275,9 +279,13 @@ margin-left:-4px;
 }
 
 h3{
-
-	 margin-top:-1px;
+ margin-top:-1px;
 	font-family: PT Sans;
-font-size: 17px;
+font-size: 18px;
 letter-spacing: 0.3px;
+
+}
+.color{
+	text-decoration: none;
+	color:lightblue;
 }
