--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,29 @@ footer{background:#4f4f4f; width:100%; padding:30px 100px 10px 100px;}
 footer .copy{ font-size:16px; padding-left:40px;} 
 footer .social{padding-right:40px;}
  
+/** Login Section */
+.login-canvass{background:url(../images/bg-login.png) repeat;}
+
+.login-canvass img{width:100%; height:100%;}
+.login-canvass .wrapper{width:40%; position:absolute; margin:0 auto; top:180px; left:30%; }
+.login-canvass .wrapper .w3-card{background:#F1FAEE; padding:30px 80px; }
+.login-canvass .wrapper .w3-card h1{line-height:25px;}
+.login-canvass .wrapper .w3-card h6{margin-bottom:40px;}
+.login-canvass .wrapper .w3-card form .signup{padding:10px 25px;}
+.login-canvass .wrapper .w3-card form input[type='text'], .login-canvass .wrapper .w3-card form input[type='password']{background:#f1faee;  font-size:16px;  padding:8px 4px 0px 35px; margin-bottom:15px;}
+.login-canvass .wrapper .w3-card form input[type='password']{background:url(../images/key.png) no-repeat;}
+.login-canvass .wrapper .w3-card form input[type='text']{background:url(../images/message.png) no-repeat;}
+.login-canvass .wrapper .w3-card form input[type='submit']{margin:0 auto;}
+.login-canvass .wrapper .w3-card form p a, .login-canvass .wrapper .w3-card form p {text-decoration:none; font-size:12px;}
+.login-canvass .wrapper .w3-card .w3-bar{padding:0px;}
+.login-canvass .wrapper .w3-card .w3-bar .w3-bar-item{padding:0px; margin:0px;}
+.login-canvass .wrapper .w3-card .w3-bar .w3-bar-item img{width:60px; height:60px;}
+.login-canvass .wrapper .line{width:270px; margin:0 auto;}
+.login-canvass .wrapper .line hr{margin-top:15px; background:#b8b8b8; height:1px;}
+.login-canvass .wrapper .line p{padding:4px; margin:0px; color:#b8b8b8;}
+.login-canvass p{text-align:center;}
+.login-canvass p a{text-decoration:none;}
+/** End Login */
 
 @media only screen and (min-width: 482px) and (max-width: 769px){
 .signup{font-weight:bold; background:#1D3557; padding:20px 30px; border-radius:35px; font-size:12px; text-transform:uppercase; text-decoration:none; color:#fff; margin-right:30px;  }
@@ -139,11 +162,32 @@ footer{background:#4f4f4f; width:100%; padding:30px 10px 10px 10px;}
 footer .copy{ font-size:16px; padding-left:10px;} 
 footer .social{padding-right:0px; text-align:center;}
 footer .social a img{width:60px; height:60px;}
+
+
+/** Login Section */
+.login-canvass{background:url(../images/bg-login.png) repeat;}
+.login-canvass img{width:100%; height:600px;}
+.login-canvass .wrapper{width:70%; position:absolute; margin:0 auto; top:140px; left:15%; }
+.login-canvass .wrapper .w3-card{background:#F1FAEE; padding:10px 50px; }
+.login-canvass .wrapper .w3-card h1{line-height:30px; font-size:20px;}
+.login-canvass .wrapper .w3-card h6{margin-bottom:20px; font-size:14px;}
+.login-canvass .wrapper .w3-card form p a, .login-canvass .wrapper .w3-card form p {text-decoration:none; font-size:12px;}
+.login-canvass .wrapper .w3-card form input[type='text'], .login-canvass .wrapper .w3-card form input[type='password']{background:#f1faee;  font-size:14px;  padding:6px 4px 0px 35px; margin-bottom:12px;}
+.login-canvass .wrapper .w3-card form input[type='password']{background:url(../images/key.png) no-repeat;}
+.login-canvass .wrapper .w3-card form input[type='text']{background:url(../images/message.png) no-repeat;}
+.login-canvass .wrapper .w3-card .w3-bar .w3-bar-item img{width:50px; height:50px;}
+.login-canvass .wrapper .line{width:270px; margin:0 auto;}
+.login-canvass .wrapper .line hr{margin-top:15px; background:#b8b8b8; height:1px;}
+.login-canvass .wrapper .line p{padding:4px; margin:0px; color:#b8b8b8;}
+.login-canvass p{text-align:center;}
+.login-canvass p a{text-decoration:none;}
+
+/** End Login */
 }
 
 @media only screen and (max-width: 481px)
 {
-.signup{font-weight:bold; background:#1D3557; padding:25px 20px; border-radius:25px; font-size:12px; text-transform:uppercase; text-decoration:none; color:#fff; margin-right:0px;  }
+.signup{font-weight:bold; background:#1D3557; padding:15px 20px; border-radius:15px; font-size:12px; text-transform:uppercase; text-decoration:none; color:#fff; margin-right:0px;  }
  .container{margin-bottom:0px;} 
  .container .banner-frame{background:url(../images/banner.png) no-repeat; width:100%; padding:0px; margin:0px; }
 .container .banner-frame .top-text{z-index:1; position:absolute; padding:70px 10px; width:100%;}
@@ -192,4 +236,24 @@ footer{background:#4f4f4f; width:100%; padding:30px 10px 10px 10px;}
 footer .copy{ font-size:16px; padding-left:10px;} 
 footer .social{padding-right:0px; text-align:center;}
 footer .social a img{width:60px; height:60px;}
+
+/** Login Section */
+.login-canvass{background:url(../images/bg-login.png) no-repeat;}
+.login-canvass img{width:100%; height:600px;}
+.login-canvass .wrapper{width:100%; position:absolute; top:350px; left:0; }
+.login-canvass .wrapper .w3-card{background:#F1FAEE; padding:10px 80px; }
+.login-canvass .wrapper .w3-card h1{line-height:20px; font-size:20px;}
+.login-canvass .wrapper .w3-card h6{margin-bottom:20px; font-size:12px;}
+.login-canvass .wrapper .w3-card form p a, .login-canvass .wrapper .w3-card form p {text-decoration:none; font-size:12px;}
+.login-canvass .wrapper .w3-card form input[type='text'], .login-canvass .wrapper .w3-card form input[type='password']{background:#f1faee;  font-size:12px;  padding:6px 4px 0px 35px; margin-bottom:12px;}
+.login-canvass .wrapper .w3-card form input[type='password']{background:url(../images/key.png) no-repeat;}
+.login-canvass .wrapper .w3-card form input[type='text']{background:url(../images/message.png) no-repeat;}
+.login-canvass .wrapper .w3-card .w3-bar .w3-bar-item img{width:30px; height:30px;}
+.login-canvass .wrapper .line{width:180px;}
+.login-canvass .wrapper .line hr{margin-top:15px; background:#b8b8b8; height:1px;}
+.login-canvass .wrapper .line p{padding:4px; margin:0px; color:#b8b8b8;}
+.login-canvass p{text-align:center;}
+.login-canvass p a{text-decoration:none;}
+
+/** End Login */
 }
