--- a/css/style.css
+++ b/css/style.css
@@ -85,12 +85,13 @@ footer .social{padding-right:40px;}
 .login-canvass img{width:100%; height:100%;}
 .login-canvass .wrapper{width:40%; position:absolute; margin:0 auto; top:180px; left:30%; }
 .login-canvass .wrapper .w3-card{background:#F1FAEE; padding:30px 80px; }
-.login-canvass .wrapper .w3-card h1{line-height:25px;}
+.login-canvass .wrapper .w3-card h1{line-height:25px; font-size:24px;}
 .login-canvass .wrapper .w3-card h6{margin-bottom:40px;}
 .login-canvass .wrapper .w3-card form .signup{padding:10px 25px;}
-.login-canvass .wrapper .w3-card form input[type='text'], .login-canvass .wrapper .w3-card form input[type='password']{background:#f1faee;  font-size:16px;  padding:8px 4px 0px 35px; margin-bottom:15px;}
-.login-canvass .wrapper .w3-card form input[type='password']{background:url(../images/key.png) no-repeat;}
-.login-canvass .wrapper .w3-card form input[type='text']{background:url(../images/message.png) no-repeat;}
+.login-canvass .wrapper .w3-card form input[type='text'], .login-canvass .wrapper .w3-card form input[type='password']{font-size:16px;  padding:8px 4px 0px 35px; margin-bottom:15px;}
+.login-canvass .wrapper .w3-card form input[type='password']{background:url(../images/key.png) no-repeat #f1faee;}
+.login-canvass .wrapper .w3-card form .email{background:url(../images/message.png) no-repeat #f1faee;}
+.login-canvass .wrapper .w3-card form .fullname{background:url(../images/name.png) no-repeat #f1faee;}
 .login-canvass .wrapper .w3-card form input[type='submit']{margin:0 auto;}
 .login-canvass .wrapper .w3-card form p a, .login-canvass .wrapper .w3-card form p {text-decoration:none; font-size:12px;}
 .login-canvass .wrapper .w3-card .w3-bar{padding:0px;}
@@ -172,9 +173,10 @@ footer .social a img{width:60px; height:60px;}
 .login-canvass .wrapper .w3-card h1{line-height:30px; font-size:20px;}
 .login-canvass .wrapper .w3-card h6{margin-bottom:20px; font-size:14px;}
 .login-canvass .wrapper .w3-card form p a, .login-canvass .wrapper .w3-card form p {text-decoration:none; font-size:12px;}
-.login-canvass .wrapper .w3-card form input[type='text'], .login-canvass .wrapper .w3-card form input[type='password']{background:#f1faee;  font-size:14px;  padding:6px 4px 0px 35px; margin-bottom:12px;}
-.login-canvass .wrapper .w3-card form input[type='password']{background:url(../images/key.png) no-repeat;}
-.login-canvass .wrapper .w3-card form input[type='text']{background:url(../images/message.png) no-repeat;}
+.login-canvass .wrapper .w3-card form input[type='text'], .login-canvass .wrapper .w3-card form input[type='password']{font-size:14px;  padding:6px 4px 0px 35px; margin-bottom:12px;}
+.login-canvass .wrapper .w3-card form input[type='password']{background:url(../images/key.png) no-repeat #f1faee;}
+.login-canvass .wrapper .w3-card form .email{background:url(../images/message.png) no-repeat #f1faee;}
+.login-canvass .wrapper .w3-card form .fullname{background:url(../images/name.png) no-repeat #f1faee;}
 .login-canvass .wrapper .w3-card .w3-bar .w3-bar-item img{width:50px; height:50px;}
 .login-canvass .wrapper .line{width:270px; margin:0 auto;}
 .login-canvass .wrapper .line hr{margin-top:15px; background:#b8b8b8; height:1px;}
@@ -245,9 +247,10 @@ footer .social a img{width:60px; height:60px;}
 .login-canvass .wrapper .w3-card h1{line-height:20px; font-size:20px;}
 .login-canvass .wrapper .w3-card h6{margin-bottom:20px; font-size:12px;}
 .login-canvass .wrapper .w3-card form p a, .login-canvass .wrapper .w3-card form p {text-decoration:none; font-size:12px;}
-.login-canvass .wrapper .w3-card form input[type='text'], .login-canvass .wrapper .w3-card form input[type='password']{background:#f1faee;  font-size:12px;  padding:6px 4px 0px 35px; margin-bottom:12px;}
-.login-canvass .wrapper .w3-card form input[type='password']{background:url(../images/key.png) no-repeat;}
-.login-canvass .wrapper .w3-card form input[type='text']{background:url(../images/message.png) no-repeat;}
+.login-canvass .wrapper .w3-card form input[type='text'], .login-canvass .wrapper .w3-card form input[type='password']{ font-size:12px;  padding:6px 4px 0px 35px; margin-bottom:12px;}
+.login-canvass .wrapper .w3-card form input[type='password']{background:url(../images/key.png) no-repeat #f1faee;}
+.login-canvass .wrapper .w3-card form .email{background:url(../images/message.png) no-repeat #f1faee;}
+.login-canvass .wrapper .w3-card form .fullname{background:url(../images/name.png) no-repeat #f1faee;}
 .login-canvass .wrapper .w3-card .w3-bar .w3-bar-item img{width:30px; height:30px;}
 .login-canvass .wrapper .line{width:180px;}
 .login-canvass .wrapper .line hr{margin-top:15px; background:#b8b8b8; height:1px;}
