--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
 	font-family: 'PT Sans', sans-serif;
 }
 .navbar>.container .navbar-brand, 
-.navbar>.container-fluid .navbar-brand,
+.navbar>.container-fluid, .navbar-brand, 
 .navbar-nav>li>a {
 	font-size: 20px;
 	color: #FFFFFF;
@@ -10,7 +10,7 @@ body {
 .navbar-brand {
 	margin-top: 6px;
 	position: absolute;
-    left: 25%;
+	left: 25%;
 }
 .navbar-nav>li>a:hover {
 	color: #1D3557;
@@ -27,7 +27,7 @@ body {
 	background-color: #1D3557;
 }
 .navbar-brand>img {
-    display: inline;
+	display: inline;
 }
 #home-icon {
 	margin-top: -5px;
@@ -43,10 +43,10 @@ body {
 	color: #1D3557;
 	border-color: #1D3557;
 	width: 145px;
-    height: 40px;
-    margin-top: 7px;
-    padding-top: 7px;
-    margin-right: -60px;
+	height: 40px;
+	margin-top: 7px;
+	padding-top: 7px;
+	margin-right: -60px;
 }
 #signup:hover {
 	background-color: #1D3557;
@@ -57,16 +57,16 @@ body {
 }
 .nav-tabs>li>a {
 	font-size: 20px;
-    color: #457B9D;
-    padding: 20px 0 20px 0;
-    text-align: center;
+	color: #457B9D;
+	padding: 20px 0 20px 0;
+	text-align: center;
 }
 .nav-tabs>li.active>a, 
 .nav-tabs>li.active>a:hover, 
 .nav-tabs>li.active>a:focus {
-    color: #457B9D;
-    border: transparent;
-    border-bottom: 3px solid #1D3557;
+	color: #457B9D;
+	border: transparent;
+	border-bottom: 3px solid #1D3557;
 }
 #policy-tab {
 	padding-top: 60px;
